# IOT_exs

./: .gitignore  README.md
ex1/: CMakeLists.txt  HTTP_client.c  HTTP_client.h  README  main.c  socket.h  socket_linux.c
ex2/: CMakeLists.txt  MQTTClient.c  MQTTClient.h  README  ex2  ex2.tar  main.c  socket_linux.c
ex2/relevantExamples/: mqttexample.h  mqttnet.c
ex2/wolfmqtt/: mqtt_client.c  mqtt_client.h  mqtt_types.h  mqttclient.c  mqttclient.h  mqttexample.c  mqttnet.c  options.h
ex3/: CMakeLists.txt  README  main.c  serial_io.c  serial_io.h
ex4/: CMakeLists.txt  README  cellular.c  cellular.h  main.c  serial_io_linux.c
ex5/: CMakeLists.txt  README  cellular.c  cellular.h  socket_linux_modem.c
ex6/: CMakeLists.txt  MQTTClient.c  MQTTClient.h  README  cellular.c  cellular.h  main.c  serial_io_linux.c  socket.h  socket_linux_modem.c
ex6/relevantExamples/: mqttexample.c  mqttnet.h
ex6/relevantExamples/mqttclient/: mqttclient.c  mqttclient.h
ex6/wolfmqtt/: mqtt_packet.c  mqtt_packet.h  mqtt_socket.c
